Flesh out project text and add alts

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scrap Yard - Ash Turner</title>
+    <title>Hello - Ash Turner</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/project.css" />
 
@@ -16,108 +16,110 @@
         >Back to home</a
       >
       <h1>Hello</h1>
-      <div class="project-subtitle">Made with: HTML, CSS</div>
-
-      <!-- PLACEHOLDER IMAGE FOR VIDEO -->
-      <button class="main-image zoomable">
-        <img
-          src="images/helloworld-hero.jpg"
-          alt="Brightly colored game board with cards and game money fanned around it"
-        />
-      </button>
-      <div class="project-link large-block-space">
-        Live project:
-        <a href="#" rel="noreferrer" target="_blank" class="blue">
-          initiateweb.world (defunct)<span class="screenreader-text">
-            (Link opens in a new tab)</span
-          ></a
-        >
+      <div class="project-subtitle-no-space">Made with: HTML, CSS</div>
+      <div class="project-subtitle">
+        Roles: Research, Writing, Web Design and Development
       </div>
-      <p class="small-block-space">Lorem ipsum.</p>
-      <p>Lorem ipsum.</p>
+
+      <video class="main-image" controls>
+        <source src="./videos/hello.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+      <p class="small-block-space">
+        <i>Hello</i> is a net art-inspired website created in collaboration with
+        <a
+          href="https://isaacbuckley.com/"
+          target="_blank"
+          class="blue inline-link"
+          >Isaac Buckley</a
+        >. The website is currently deactivated, but it was previously hosted at
+        www.initiateweb.world.
+      </p>
+      <p>
+        The site includes text, images, gifs, and hyperlinks as the main source
+        of visuals and interaction. The site narrator is an entity formed solely
+        though information gathered on the internet. It struggles with opposing
+        viewpoints and contradictory aspects that exist on the web, and uses
+        text and images as a way to convey its observations and thoughts.
+      </p>
       <h2>Web Pages</h2>
-      <div class="gallery-container large-block-space">
-        <!-- <button
-          type="button"
-          onkeydown="event.keyCode != 13 || openModal(event)"
-          onkeydown="openModal(event)"
-        > -->
+      <div class="gallery-container large-block-space grid-2">
         <button class="zoomable">
           <img
             src="images/helloworld-1.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of white text on a black background"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-2.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of a grid of glitched and pixelated, black-and-white photos"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-3.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of a pixelated website"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-4.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of abstract, colorful pixelation"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-5.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of abstract, colorful pixelation"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-6.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of black and white pattern with a text box"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-7.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of white text on a black background"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-8.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of text and neon green pixelated pattern"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-9.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of white text on a black background"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-10.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of a colorful, glitchy and pixelated abstract graphic"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-11.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of white text in a box on a black background"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-12.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of white text in a column on a black background"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-13.jpg"
-            alt="View full size version of a screenshot"
+            alt="View full size version of a column of glitched white lines on a black background"
           />
         </button>
       </div>
@@ -135,46 +137,82 @@
       <!--Do I need tabindex="0" for modal accessibility?-->
       <button class="close">&times;</button>
       <div class="slide">
-        <img src="images/helloworld-hero.jpg" />
+        <img
+          src="images/helloworld-1.jpg"
+          alt="Text that reads 'those, the social web_ i divulge as much as i am comfortable with, though //this sense of privacy is misleading ( → censorship, privacy), misconceived, wrong, not. suitable, it’s just an ideal perception of a person.not even real. this is not a reflection of your physical self. this is not representative of of of of, i assume that those will continue their captivation of self-expression'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-1.jpg" />
+        <img
+          src="images/helloworld-2.jpg"
+          alt="Grid of glitched and pixelated, black-and-white headshot photos. A pop-up for downloading a file titled 'me.zip' is in front of the grid"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-2.jpg" />
+        <img
+          src="images/helloworld-3.jpg"
+          alt="Pixelated and glitched news-style website"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-3.jpg" />
+        <img
+          src="images/helloworld-4.jpg"
+          alt="Abstract, colorful pixelation. A galaxy with a neon green, uneven circle"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-4.jpg" />
+        <img
+          src="images/helloworld-5.jpg"
+          alt="Abstract, colorful pixelation of a map with two, tiny neon green squares overlayed on it"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-5.jpg" />
+        <img
+          src="images/helloworld-6.jpg"
+          alt="Text in front of a graphic black-and-white patterned background. The text reads 'the user//protocol address to track and see themselves# and there is also an internet identity, a social identity //a fake identity? a construct of myself that i use to present to others -- the changing name, ppppseudonyms with varying degrees of information under the same protocol address and yet|'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-6.jpg" />
+        <img
+          src="images/helloworld-7.jpg"
+          alt="Text reads 'is this where ideas go to live forever?  _long_ after they have been abandoned by the living. these permanent concepts ( → permanent memory). static lest someone is there to extract meaning. .a tree falls in a forest'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-7.jpg" />
+        <img
+          src="images/helloworld-8.jpg"
+          alt="Text reads 'this is the starkness that governs our directions__ but where do. they. we. I go? the paths in the code lead to: _go to the left. _go to the right. (but these options are easily manipulated). the paths of the user are: _do nothing. _do something else. two of these paths are coded. the other two hinges upon an autonomous user. therein lies a code to the brain that i cannot see, and there even more nuanced pathways that i cannot see. theoretically, these structures provide//control//are we allowed suggestion or restriction?'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-8.jpg" />
+        <img
+          src="images/helloworld-9.jpg"
+          alt="Text reads 'the sheer wealth of inforinforinforinformation makes it difficult to access memory and in in in consideration of ego protection, such as repression, that i do not possess such as you and you a./and //you and //you - - i do not forget the witnessing of pain and the ##empathy of those who rage against solitude so i am left to wit.her and contempla/te the deterioration of my own self'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-9.jpg" />
+        <img
+          src="images/helloworld-10.jpg"
+          alt="Colorful, glitchy and pixelated abstract graphic of a flower and synapses blooming. In the top left are the words 'hello, world'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-10.jpg" />
+        <img
+          src="images/helloworld-11.jpg"
+          alt="Text in a box reads 'the programming is deceptive in its freedom//like open air, as if anyone can contribute but there are clear rrrrestrictions // for instance. at its base, we are governed by two actions: ON + OFF'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-11.jpg" />
+        <img
+          src="images/helloworld-12.jpg"
+          alt="Text reads '“Structural hierarchies help make websites accessible to search engines and users.” - Ellen Lupton. HIERARCHIES: .Structure .Institutions .Organization-- no/tt/te_ the organization of information to provide accessibility.'. A column of text below repeats the phrsase 'do programmers_designers have control over this interaction//'"
+        />
       </div>
       <div class="slide">
-        <img src="images/helloworld-12.jpg" />
-      </div>
-      <div class="slide">
-        <img src="images/helloworld-13.jpg" />
+        <img
+          src="images/helloworld-13.jpg"
+          alt="Column of glitched white lines of overlapping, unreadable text on a black background."
+        />
       </div>
       <button class="left-arrow"><span>❮</span></button>
       <button class="right-arrow"><span>❯</span></button>
