Add Unmasked project

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
 
         <div class="filter-option" data-filter="code game">
-          <a href="#">
+          <a href="./unmasked.html">
             <img
               src="./images/landing-unmasked.png"
               alt="White animal masks in a horizontal row, including an otter, horse, wolf, reptile, rabbit, and owl"
