--- a/unmasked.html
+++ b/unmasked.html
@@ -46,8 +46,8 @@
       </div>
       <p class="small-block-space">
         The Unmasked is a short and reflective single-player game that explores
-        spirituality and religion, and what it means to different people.
-        Created in collaboration with
+        spirituality and religion, and what it means to different people. The
+        game was created in collaboration with
         <a
           href="https://www.behance.net/rdatko51e8"
           target="_blank"
