Add content to storylines project

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="game">
-          <a href="#">
+          <a href="./storylines.html">
             <img
               src="./images/landing-storylines.png"
               alt="Design of bird on a mountaintop, with the word 'Storylines' on the right-hand side"
