Create ambrosia project page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code">
-          <a href="#">
+          <a href="./ambrosia.html">
             <img
               src="./images/landing-ambrosia-alt.png"
               alt="Cup with pudding and cherry next to a heart"
