--- a/unmasked.html
+++ b/unmasked.html
@@ -75,7 +75,7 @@
         yourself to the wrong person risks misfortune. It is up to you how the
         ritual will end. Will you discover what lies under the Spirit's mask?”
       </p>
-      <h2>Web Pages</h2>
+      <h2>Screenshots</h2>
       <div class="gallery-container large-block-space">
         <button class="zoomable">
           <img
