--- a/storylines.html
+++ b/storylines.html
@@ -62,7 +62,7 @@
         enables players to share, discuss and empathize with stories of
         empowerment.
       </p>
-      <h2>Web Pages</h2>
+      <h2>Gallery</h2>
       <!-- First row of gallery -->
       <div class="gallery-container custom-grid-storylines padded-row">
         <button class="zoomable">
