Create content for interplay

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
-          <a href="#">
+          <a href="./interplay.html">
             <img
               src="./images/landing-interplay.png"
               alt="White circle with abstract shape cut out of the middle"
