--- a/interplay.html
+++ b/interplay.html
@@ -33,7 +33,14 @@
       <p>
         Participants under the projection must stay inside the circle for it to
         stay green, creating incentive for them to expand their personal
-        boundaries.
+        boundaries. The project was created in collaboration with
+        <a
+          href="https://allandoyle.com/"
+          rel="noreferrer"
+          target="_blank"
+          class="blue"
+          >Allan Doyle</a
+        >.
       </p>
       <h2>Gallery</h2>
       <div class="gallery-container grid-2 padded-row">
