Create content for Debug.Log

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
-          <a href="#">
+          <a href="./debug-log.html">
             <img
               src="./images/landing-debug.png"
               alt="Text states 'debug.Log_' in bold above the text 'Press A to execute method'"
