--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
-          <a href="#">
+          <a href="./return.html">
             <img
               src="./images/landing-return.png"
               alt="The word Return in all capital letters"
