Create content for in david's absence project

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="game art">
-          <a href="#">
+          <a href="./david.html">
             <img
               src="./images/landing-david.png"
               alt="Postcard with a heart and 'David' written on the front, layered on top of graph paper with illegible writing"
