Create content for Home project

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </a>
         </div>
         <div class="filter-option" data-filter="art">
-          <a href="#">
+          <a href="./home.html">
             <img
               src="./images/landing-home-alt.png"
               alt="Graphic outline of an open laptop with the world 'HOME' on the screen. Below the laptop is the text, 'Press any key to continue _'"
