Add some ASCII art

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--
+
+ xXXXx  xXXXx          xXXx  xXXx             XX     
+  XXX    XXX            XX    XX              XX       
+  XXX    XXX     xXx    XX    XX      xXx     XX     
+  XXXXXXXXXX   xX  xXx  XX    XX    xX   Xx   XX        
+  XXXXXXXXXX  XXXXXXXx  XX    XX   xX     Xx  XX        
+  XXX    XXX  xX        XX    XX   xX     Xx           
+  XXX    XXX   xXxxxX   XX    XX    xX   Xx   xx        
+ xXXXx  xXXXx   xXXx   xXXx  xXXx     XxX     XX         
+
+-->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -152,7 +164,7 @@
             >
           </a>
         </div>
-        <div class="filter-option" data-filter="game">
+        <!-- <div class="filter-option" data-filter="game">
           <a href="#">
             <img
               src="./images/landing-jmm.png"
@@ -166,7 +178,7 @@
               >
             </span>
           </a>
-        </div>
+        </div> -->
         <div class="filter-option" data-filter="code game">
           <a href="./debug-log.html">
             <img
@@ -258,7 +270,7 @@
           </a>
         </div>
 
-        <div class="filter-option" data-filter="art">
+        <!-- <div class="filter-option" data-filter="art">
           <a href="#">
             <img
               src="./images/landing-codergirl.png"
@@ -272,7 +284,7 @@
               ></span
             >
           </a>
-        </div>
+        </div> -->
       </div>
 
       <footer>
