Create content for draw this project

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="projects-container large-block-space">
         <div class="filter-option" data-filter="code">
-          <a href="./project-template.html">
+          <a href="./draw-this.html">
             <img
               src="./images/landing-drawthis.png"
               alt="Lighthouse with arrow and pause buttons below"
