Add live project link

--- a/draw-this.html
+++ b/draw-this.html
@@ -29,13 +29,13 @@
       <div class="project-link">
         Live project:
         <a
-          href="http://wandering.click/"
+          href="https://gojanedoe.github.io/drawing-app/"
           rel="noreferrer"
           target="_blank"
           class="blue"
           ><span class="underline"
             ><span class="underline-mask med-animation">
-              wandering.click</span
+              https://gojanedoe.github.io/drawing-app/</span
             ></span
           ><span class="screenreader-text"> (Link opens in a new tab)</span></a
         >
@@ -53,7 +53,7 @@
         >
       </div>
       <p class="small-block-space">
-        Draw This is a front-end web application that generates random,
+        Draw This! is a front-end web application that generates random,
         royalty-free photos fetched from Wikimedia Commons' API. Users can use
         the website for timed drawing practice, and can choose from three image
         categories: people, architecture, or landscapes.
