--- a/index.html
+++ b/index.html
@@ -317,8 +317,12 @@
           >
         </div>
         <div>
-          <a href="#" class="green"
-            ><span class="underline underline-perm">Contact Me</span></a
+          <a
+            href="https://www.linkedin.com/in/ash-turner-00/"
+            class="green"
+            rel="noreferrer"
+            target="_blank"
+            ><span class="underline underline-perm">LinkedIn</span></a
           >
         </div>
       </footer>
