--- a/debug-log.html
+++ b/debug-log.html
@@ -41,14 +41,14 @@
           href="https://isaacbuckley.com/"
           rel="noreferrer"
           target="_blank"
-          class="blue"
+          class="blue inline-link"
           >Isaac Buckley</a
         >,
         <a
           href="https://www.artstation.com/dyelon/"
           rel="noreferrer"
           target="_blank"
-          class="blue"
+          class="blue inline-link"
           >Dylan Burrell</a
         >, and Ben Price.
       </p>
