--- a/interplay.html
+++ b/interplay.html
@@ -38,7 +38,7 @@
           href="https://allandoyle.com/"
           rel="noreferrer"
           target="_blank"
-          class="blue"
+          class="blue inline-link"
           >Allan Doyle</a
         >.
       </p>
