Adjust link and hover animation

--- a/draw-this.html
+++ b/draw-this.html
@@ -34,7 +34,7 @@
           target="_blank"
           class="blue"
           ><span class="underline"
-            ><span class="underline-mask med-animation">
+            ><span class="underline-mask long-animation">
               https://gojanedoe.github.io/drawing-app/</span
             ></span
           ><span class="screenreader-text"> (Link opens in a new tab)</span></a
