Change filter links to buttons

--- a/index.html
+++ b/index.html
@@ -88,38 +88,39 @@
       </p>
       <p class="small-block-space">To check out my work, click below:</p>
       <nav class="filters-list large-block-space">
-        <a
+        <button
           href="#/"
           class="pink"
           data-filter="code"
-          role="button"
           aria-label="Filter projects by: Code"
-          ><span class="underline selected"
-            ><span class="underline-mask short-animation">Code</span></span
-          ></a
         >
-        <a
+          <span class="underline selected"
+            ><span class="underline-mask short-animation">Code</span></span
+          >
+        </button>
+        <button
           href="#/"
           class="yellow"
           data-filter="game"
-          role="button"
           aria-label="Filter projects by: Games and Play"
-          ><span class="underline"
+        >
+          <span class="underline"
             ><span class="underline-mask med-animation"
               >Games + Play</span
             ></span
-          ></a
-        >
-        <a
+          >
+        </button>
+        <button
           href="#/"
           class="blue"
           data-filter="art"
-          role="button"
           aria-label="Filter projects by: Art"
-          ><span class="underline"
-            ><span class="underline-mask short-animation">Art</span></span
-          ></a
         >
+          <span class="underline"
+            ><span class="underline-mask short-animation">Art</span></span
+          >
+        </button>
+        <!-- <div id="announce" aria-live="polite">Now showing games and play projects below</div> -->
       </nav>
 
       <div class="projects-container large-block-space">
