--- a/return.html
+++ b/return.html
@@ -131,16 +131,16 @@
     <div
       class="modal"
       role="dialog"
-      aria-live="assertive"
       aria-modal="true"
-      aria-label="Lightbox of project images"
+      aria-label="Slideshow of project images"
       aria-describedby="modal-description"
     >
       <p id="modal-description" class="screenreader-text">
         Use arrow keys or the arrow buttons to proceed to the next or last image
-        in the lightbox. To exit the lightbox, press escape or click the close
+        in the slideshow. To exit the slideshow, press escape or click the close
         button.
       </p>
+      <p id="slide-num" aria-live="polite" class="screenreader-text"></p>
       <button class="close" aria-label="Close">&times;</button>
       <div class="slide">
         <img
@@ -204,10 +204,10 @@
       </div>
 
       <button class="left-arrow" aria-label="Previous image">
-        <span>❮</span>
+        <span>&#x276E;</span>
       </button>
       <button class="right-arrow" aria-label="Next image">
-        <span>❯</span>
+        <span>&#x276F;</span>
       </button>
     </div>
   </body>
